# volumen

./: .gitignore  CMakeLists.txt  README.md  benchmark.patch
.github/workflows/: cmake-single-platform.yml
benchmarks/: benchmarks.cpp  benchmarks.hpp  main.cpp
include/api/: api.hpp
include/auth/: auth.hpp
include/misc/: config.hpp  error_handler.hpp  ssave.hpp  utils.hpp
include/ui/: annoucements.hpp  custom_ui.hpp  dashboard.hpp  grades.hpp  login.hpp  main_ui.hpp  messages.hpp  timetable.hpp
src/: annoucements.cpp  annoucements.hpp  api.cpp  api.hpp  auth.cpp  auth.hpp  authorization.cpp  authorization.hpp  config.cpp  config.hpp  content.hpp  custom_ui.cpp  custom_ui.hpp  error_handler.cpp  error_handler.hpp  grades.cpp  grades.hpp  homescreen.cpp  homescreen.hpp  login.cpp  login.hpp  main.cpp  main_ui.cpp  main_ui.hpp  messages.cpp  messages.hpp  ssave.cpp  ssave.hpp  tab.cpp  tab.hpp  timetable.cpp  timetable.hpp  utils.cpp  utils.hpp  volumen.cpp  volumen.hpp
src/api/: api.cpp
src/auth/: auth.cpp
src/dashboard/: dashboard.cpp  dashboard.hpp  grades_dashboard.cpp  timetable-dashboard.cpp  timetable_dashboard.cpp  weekend_bar.cpp
src/misc/: config.cpp  error_handler.cpp  ssave.cpp  utils.cpp
src/ui/: annoucements.cpp  custom_ui.cpp  grades.cpp  login.cpp  main_ui.cpp  messages.cpp  timetable.cpp
src/ui/dashboard/: dashboard.cpp  grades_dashboard.cpp  timetable_dashboard.cpp  upcoming_events.cpp  weekend_bar.cpp
